<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="@string/theme_settings">
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:key="dynamic_colors"
            android:defaultValue="true"
            android:title="@string/dynamic_colors"
            android:summary="@string/dynamic_colors_summary" />
        <DropDownPreference
            app:iconSpaceReserved="false"
            android:key="theme_color"
            app:useSimpleSummaryProvider="true"
            android:title="@string/theme_color"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:defaultValue="MATERIAL_TEAL" />
        <DropDownPreference
            app:iconSpaceReserved="false"
            android:key="dark_mode"
            app:useSimpleSummaryProvider="true"
            android:title="@string/night_theme"
            android:entries="@array/night_theme_entries"
            android:entryValues="@array/night_theme_values"
            android:defaultValue="system" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/style_settings"
        app:iconSpaceReserved="false" >
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:key="show_headers"
            android:title="@string/show_headers"
            android:summary="@string/show_headers_summary" />
        <Preference
            app:iconSpaceReserved="false"
            android:key="item_entry_appearance"
            android:title="@string/item_entry_appearance"
            android:summary="@string/item_entry_appearance_summary"/>
        <Preference
            app:iconSpaceReserved="false"
            android:key="bottom_player"
            android:title="@string/bottom_player"
            android:summary="@string/bottom_player_summary"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/app_settings"
        app:iconSpaceReserved="false">
        <Preference
            app:iconSpaceReserved="false"
            android:id="@+id/bcr_directory"
            android:key="bcr_directory"
            android:title="@string/bcr_directory_title" />
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:key="vibrate"
            android:defaultValue="true"
            android:title="@string/vibrate_title"
            android:summary="@string/vibrate_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/miscellaneous"
        app:iconSpaceReserved="false">
        <Preference
            app:iconSpaceReserved="false"
            android:key="version"
            android:title="@string/version"
            android:summary="" />
    </PreferenceCategory>
</PreferenceScreen>