<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/contact_icon_category"
        app:iconSpaceReserved="false" >
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:key="show_contact_icon"
            android:title="@string/show_contact" />
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:key="show_colored_tiles"
            android:title="@string/show_colored_tiles"
            android:summary="@string/show_colored_tiles_summary" />
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:key="dark_letter_on_dark_mode"
            android:dependency="show_colored_tiles"
            android:title="@string/show_dark_letters_title"
            android:summary="@string/show_dark_letters_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/date_settings"
        app:iconSpaceReserved="false">
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/call_info"
        app:iconSpaceReserved="false">
        <DropDownPreference
            app:iconSpaceReserved="false"
            android:title="@string/show_sim_info"
            android:defaultValue="1"
            app:useSimpleSummaryProvider="true"
            android:key="show_sim_info"
            android:entries="@array/sim_info_entries"
            android:entryValues="@array/sim_info_entries_values"/>
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:key="show_number_label"
            android:title="@string/show_number_label" />
    </PreferenceCategory>


</PreferenceScreen>