<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="@string/player_settings" >

        <DropDownPreference
            app:iconSpaceReserved="false"
            android:key="show_sim_player"
            app:useSimpleSummaryProvider="true"
            android:title="@string/show_sim_info"
            android:entries="@array/sim_info_entries"
            android:entryValues="@array/sim_info_entries_values"
            android:defaultValue="1" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:key="show_label_player"
            app:useSimpleSummaryProvider="true"
            android:title="@string/show_number_label"
            android:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>