<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_action_search"
        android:iconTint="?colorControlNormal"
        android:orderInCategory="1"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="@string/search" />

    <item android:id="@+id/menu_filter"
        android:title="@string/filter_none"
        android:icon="@drawable/ic_filter"
        android:iconTint="?colorControlNormal"
        app:showAsAction="ifRoom"
        app:actionLayout="@layout/filter_action_item"
        android:orderInCategory="1"
        android:visible="true"/>

    <group
        android:menuCategory="container">

        <item
            android:id="@+id/batch_delete"
            android:orderInCategory="2"
            app:showAsAction="never"
            android:title="@string/batch_delete" />

        <item
            android:id="@+id/menu_settings"
            android:orderInCategory="99"
            app:showAsAction="never"
            android:title="@string/settings" />
    </group>

</menu>
