<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/breakpointDialogTitleInputLayout"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_breakpoint"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/breakpointDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/breakpointDialogDescriptionInputLayout"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_breakpoint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breakpointDialogTitleInputLayout">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/breakpointDialogDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <!-- Buttons at the bottom -->
    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breakpointDialogDescriptionInputLayout">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNegative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/trans"
            android:layout_marginEnd="12dp"
            android:textColor="?colorPrimary"
            android:text="@string/cancel_breakpoint"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPositive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_breakpoint"
            app:backgroundTint="@color/trans"
            android:textColor="?colorPrimary"
            android:layout_marginEnd="8dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>